# pytorch-ir

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.ko.md  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: ruff-format.sh
.github/workflows/: docs.yml  publish.yml
docs/: TODO.md  advanced-example.ko.md  advanced-example.md  api.md  cli.ko.md  cli.md  concepts.en.md  concepts.ko.md  concepts.md  example.en.md  example.ko.md  example.md  extending.ko.md  extending.md  index.en.md  index.ko.md  index.md  lifted-tensor.ko.md  lifted-tensor.md  operators.ko.md  operators.md  setup.ko.md  setup.md  usage.ko.md  usage.md
docs/api/: cli.ko.md  converter.ko.md  converter.md  executor.ko.md  executor.md  exporter.ko.md  exporter.md  index.ko.md  index.md  ir.en.md  ir.ko.md  ir.md  ops.ko.md  ops.md  serializer.en.md  serializer.ko.md  serializer.md  verifier.ko.md  verifier.md  visualize.en.md  visualize.ko.md  visualize.md  weight_loader.en.md  weight_loader.ko.md  weight_loader.md
examples/: basic_usage.py  extract_kimi_k25_text_ir.py  resnet_example.py
examples/kimi_k25_text_local/: __init__.py  model.py
npu_ir/: __init__.py  analyzer.py  converter.py  executor.py  exporter.py  ir.py  serializer.py  verifier.py  visualize.py  weight_loader.py
npu_ir/ops/: __init__.py  aten_impl.py  aten_ops.py  registry.py
prompts/: ATTACKER_PROMPT.md
tests/: __main__.py  conftest.py  test_analyzer.py  test_cli.py  test_comprehensive.py  test_converter.py  test_executor.py  test_exporter.py  test_lifted_tensor.py  test_models.py  test_verifier.py
tests/models/: __init__.py  attention.py  base.py  multi_io.py  shared_weights.py  skip_connections.py
tests/testing/: __init__.py  mermaid.py  report.py  runner.py  statistics.py
torch_ir/: __init__.py  __main__.py  analyzer.py  cli.py  converter.py  executor.py  exporter.py  ir.py  serializer.py  verifier.py  visualize.py  weight_loader.py
torch_ir/ops/: __init__.py  aten_impl.py  aten_ops.py  registry.py
