[project]
name = "torch-ir"
version = "0.1.0"
description = "PyTorch IR extraction framework for compiler backends"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "torchvision>=0.16",
    "ruff>=0.4",
    "ty>=0.0.15",
    "pre-commit>=4.0",
]
rendering = [
    "mmdc>=0.4",
]
safetensors = [
    "safetensors>=0.4",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-static-i18n>=1.0",
]

[project.scripts]
torch-ir = "torch_ir.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["torch_ir"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
# PyTorch 내부 타입(schema 등)에 대한 ty 미지원으로 억제
unresolved-attribute = "ignore"
